--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "homepage": "https://MohammedMuti.github.io/Property",
+  "homepage": "https://mohammedmuti.github.io/Property/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
